[metadata]
description-file = README.md

[bumpversion]
current_version = 0.0.1
files = setup.py README.md lcboapi/__init__.py
commit = True
tag = True

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    env
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfs
    --strict
    --ignore=setup.py
    --ignore=ci
    --tb=short
