[bumpversion]
current_version = 0.2.1
files = setup.py README.rst lcboapi/__init__.py
commit = True
tag = True

[metadata]
description-file = README.rst

[tool:pytest]
norecursedirs = 
	.git
	.tox
	dist
	build
	env
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-rxEfs
	--strict
	--ignore=setup.py
	--ignore=ci
	--tb=short

